--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,16 @@
 h1 {
-  color: red;
+  color: crimson;
   text-align: center;
 }
 
 h2 {
   font-style: italic;
   text-align: center;
+}
+
+h3  {
+  font-weight: bold;
+  color:  violet;
 }
 
 p {
